# nostr-dvm-kit

./: .dockerignore  Dockerfile  README.md  pyproject.toml
src/: cli.py  client.py  config.py  dvm.py  dvm_echo.py
